src/objects/FRM_Report__c.object
<CustomObject>
    <description>Object supports transaction master file details to send report to Endur.</description>
    <fields>
        <fullName>ADU_Exp_Mwhs__c</fullName>
        <label>ADU Exp Mwhs</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Name__c</fullName>
        <label>Book Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Sell__c</fullName>
        <label>Buy Sell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sell</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Buy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consult_Fee__c</fullName>
        <label>Consult Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contr_Agree_Num__c</fullName>
        <label>Contr Agree Num</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Days__c</fullName>
        <formula>Date_End__c  -  Date_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Code__c</fullName>
        <label>Cust Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Name__c</fullName>
        <label>Cust Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Type__c</fullName>
        <label>Cust Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_End__c</fullName>
        <label>Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Start__c</fullName>
        <label>Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Point__c</fullName>
        <label>Delivery Point</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Loss_Pctg__c</fullName>
        <formula>IF( ( Energy__c  +  Swing__c  +  Basis__c ) == 0 , 0, Dist_Loss__c  /  (  Energy__c  +  Swing__c  +  Basis__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dist Loss Pctg</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dist_Loss__c</fullName>
        <label>Dist Loss</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy__c</fullName>
        <label>Energy</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entry_Date_Time__c</fullName>
        <label>Entry Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FRM_Profile_Zone__c</fullName>
        <label>FRM Profile Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRM_Profile__c</fullName>
        <label>FRM Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_ARR__c</fullName>
        <label>ISO ARR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Admin__c</fullName>
        <label>ISO Admin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Ancill__c</fullName>
        <label>ISO Ancill</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_FTR__c</fullName>
        <label>ISO FTR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Losses__c</fullName>
        <label>ISO Losses</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_NITS__c</fullName>
        <label>ISO NITS</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_SSR_RMR__c</fullName>
        <label>ISO SSR RMR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LDC_Vendor__c</fullName>
        <label>LDC_Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mktg_Misc_Fee__c</fullName>
        <label>Mktg Misc Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Muni_Fee__c</fullName>
        <label>Muni Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSPLC_Kw_Transaction__c</fullName>
        <label>NSPLC Kw Transaction</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLC_Kw_Transaction__c</fullName>
        <label>PLC Kw Transaction</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pct_Energy_Fixed__c</fullName>
        <label>Pct Energy Fixed</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Type__c</fullName>
        <label>Prod Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Applicable__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>RPS Applicable</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS__c</fullName>
        <label>RPS</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reconcile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Approval__c</fullName>
        <label>Risk Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>ENTRY</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                </value>
                <value>
                    <fullName>VOID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swing__c</fullName>
        <label>Swing</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <label>Term Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tot_ISO_Fees__c</fullName>
        <formula>ISO_ARR__c  +  ISO_FTR__c  +  ISO_NITS__c  +  ISO_Losses__c  +  ISO_Ancill__c  +  ISO_SSR_RMR__c  +  ISO_Admin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tot ISO Fees</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_Priced_Mwh__c</fullName>
        <label>Tot Priced Mwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tot_REC_Pctg__c</fullName>
        <label>Tot REC Pctg</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fixed__c</fullName>
        <label>Total Fixed</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Date__c</fullName>
        <label>Trade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trade_Num__c</fullName>
        <formula>RIGHT( Name ,  LEN( Name )  - 4 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trader_ID__c</fullName>
        <label>Trader ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCB_POR__c</fullName>
        <label>UCB POR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Rate_Class__c</fullName>
        <label>Utility Rate Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Settlement_Zone__c</fullName>
        <label>Utility Settlement Zone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vol_Rec_Prod_Type__c</fullName>
        <label>Vol Rec Prod Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vol_Rec__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Vol Rec</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>FRM Report</label>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Contract_Days__c</columns>
        <columns>Contr_Agree_Num__c</columns>
        <columns>Cust_Code__c</columns>
        <columns>Cust_Name__c</columns>
        <columns>Cust_Type__c</columns>
        <columns>Date_End__c</columns>
        <columns>Date_Start__c</columns>
        <columns>FRM_Profile__c</columns>
        <columns>FRM_Profile_Zone__c</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>Service_Territory__c</columns>
        <columns>Term_Months__c</columns>
        <columns>Trade_Num__c</columns>
        <columns>Vol_Rec__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dropped_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Contr_Agree_Num__c</columns>
        <columns>Cust_Code__c</columns>
        <columns>Cust_Name__c</columns>
        <columns>Cust_Type__c</columns>
        <columns>Date_End__c</columns>
        <columns>Date_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reconcile__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Dropped Yesterday</label>
    </listViews>
    <listViews>
        <fullName>Todays_Deals</fullName>
        <columns>NAME</columns>
        <columns>Contr_Agree_Num__c</columns>
        <columns>FRM_Profile__c</columns>
        <columns>Book_Name__c</columns>
        <columns>Cust_Type__c</columns>
        <columns>Date_Start__c</columns>
        <columns>Term_Months__c</columns>
        <columns>Prod_Type__c</columns>
        <columns>NSPLC_Kw_Transaction__c</columns>
        <columns>PLC_Kw_Transaction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Deals</label>
    </listViews>
    <nameField>
        <displayFormat>FRM-{000000000}</displayFormat>
        <label>FRM  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FRM Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>